@@ -203,7 +203,7 @@ generate_early_secrets(gnutls_session_t session,
 	if (ret < 0)
 		return gnutls_assert_val(ret);
 
-	ret = _gnutls_call_secret_func(session, GNUTLS_SECRET_CLIENT_EARLY_TRAFFIC_SECRET,
+	ret = _gnutls_call_keylog_func(session, "CLIENT_EARLY_TRAFFIC_SECRET",
 				       session->key.proto.tls13.e_ckey,
 				       prf->output_size);
 	if (ret < 0)
@@ -217,7 +217,7 @@ generate_early_secrets(gnutls_session_t session,
 	if (ret < 0)
 		return gnutls_assert_val(ret);
 
-	ret = _gnutls_call_secret_func(session, GNUTLS_SECRET_EARLY_EXPORTER_SECRET,
+	ret = _gnutls_call_keylog_func(session, "EARLY_EXPORTER_SECRET",
 				       session->key.proto.tls13.ap_expkey,
 				       prf->output_size);
 	if (ret < 0)
