@@ -292,7 +292,7 @@ static int generate_ap_traffic_keys(gnutls_session_t session)
 	if (ret < 0)
 		return gnutls_assert_val(ret);
 
-	ret = _gnutls_call_secret_func(session, GNUTLS_SECRET_EXPORTER_SECRET,
+	ret = _gnutls_call_keylog_func(session, "EXPORTER_SECRET",
 				       session->key.proto.tls13.ap_expkey,
 				       session->security_parameters.prf->output_size);
 	if (ret < 0)
