@@ -38,15 +38,15 @@ int _gnutls_recv_server_crt_request(gnutls_session_t session);
 int _gnutls_send_server_crt_request(gnutls_session_t session, int again);
 int _gnutls_recv_client_certificate_verify_message(gnutls_session_t
 						   session);
-int _gnutls_call_secret_func(gnutls_session_t session,
-			     gnutls_handshake_secret_type_t type,
+int _gnutls_call_keylog_func(gnutls_session_t session,
+			     const char *label,
 			     const uint8_t *data,
 			     unsigned size);
 void _gnutls_nss_keylog_write(gnutls_session_t session,
 			      const char *label,
 			      const uint8_t *secret, size_t secret_size);
-int _gnutls_nss_keylog_secret_func(gnutls_session_t session,
-				   gnutls_handshake_secret_type_t type,
-				   const gnutls_datum_t *secret);
+int _gnutls_nss_keylog_func(gnutls_session_t session,
+			    const char *label,
+			    const gnutls_datum_t *secret);
 
 #endif /* GNUTLS_LIB_KX_H */
